Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28745

UBSan: Incorrect class in McbpDestroyBucketTask runtime cast

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • 5.5.0
    • memcached
    • Untriaged
    • Unknown

    Description

      As reported by UBSan:

      kv_engine/daemon/memcached.cc:2270:71: runtime error: member call on address 0x000103e35a98 which does not point to an object of type 'McbpDestroyBucketTask'
          0x000103e35a98: note: object is of type 'delete_all_buckets()::DestroyBucketTask'
      

      This is a simple coding error - we are using the wrong type in the dynamic cast.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty