MB-28745: UBSan: Fix incorrect class in runtime cast

As reported by UBSan:

    runtime error: member call on address 0x000103e35a98 which does not point to an object of type 'McbpDestroyBucketTask'
    0x000103e35a98: note: object is of type 'delete_all_buckets()::DestroyBucketTask'

This is a simple coding error - we are using the wrong type in the
dynamic cast.

Change-Id: Ifecd3152c48089e02d5817544012f1178871eec7
Reviewed-on: http://review.couchbase.org/91024
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Build Bot <build@couchbase.com>